analyzer/tests/snapshots/errors__call_undefined_function_on_storage_struct.snap
---
source: analyzer/tests/errors.rs
expression: "error_string(&path, &src)"

---


UndefinedValue on line 8
[31mself.thingy.doesnt_exist()[0m
