analyzer/tests/snapshots/errors__case_67.snap
---
source: analyzer/tests/errors.rs
expression: errstr

---


SignedExponentNotAllowed on line 4
return [31mbase ** exponent[0m
