analyzer/tests/snapshots/errors__case_68.snap
---
source: analyzer/tests/errors.rs
expression: errstr

---


TypeError on line 5
return [31mbase ** exponent[0m
