analyzer/tests/snapshots/errors__case_69.snap
---
source: analyzer/tests/errors.rs
expression: errstr

---


TypeError on line 3
return [31mx + y[0m
