analyzer/tests/snapshots/errors__case_77.snap
---
source: analyzer/tests/errors.rs
expression: errstr

---


NumericLiteralExpected on line 4
return [31mu16(val)[0m
