analyzer/tests/snapshots/errors__case_85.snap
---
source: analyzer/tests/errors.rs
expression: errstr

---


UndefinedValue on line 6
[31mself.my_sto_tuple.iteo0[0m
