analyzer/tests/snapshots/errors__circular_dependency_create.snap
---
source: analyzer/tests/errors.rs
expression: "error_string(&path, &src)"

---


CircularDependency on line 3
foo: Foo = [31mFoo.create(0)[0m
